--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 #header {
     width: 100%;
     height: 100vh;
-    background-image: url(tttt.jpeg);
+    background-image: url();
     background-position: center;
     background-size: cover;
     margin-top: 20px;
